--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M1</version>
                 <configuration>
-                    <properties>
+              <!---      <properties>
                         <configurationParameters>
                             junit.jupiter.execution.parallel.enabled = true
                             junit.jupiter.execution.parallel.mode.default = concurrent
                             junit.jupiter.execution.parallel.mode.classes.default = concurrent
                         </configurationParameters>
-                    </properties>
-<!--                    <parallel>all</parallel>-->
-<!--                    <threadCount>10</threadCount>-->
-<!--                    <redirectTestOutputToFile>true</redirectTestOutputToFile>-->
+                    </properties> -->
+                    <parallel>all</parallel>
+                    <threadCount>10</threadCount>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 </configuration>
             </plugin>
         </plugins>
