--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 	
     <properties>
-		<maven.compiler.target>8</maven.compiler.target>
-		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>12</maven.compiler.target>
+		<maven.compiler.source>12</maven.compiler.source>
 		<junit.jupiter.version>5.4.0</junit.jupiter.version>
 	</properties>
          
@@ -29,7 +29,7 @@
 		</dependency>
 	</dependencies>
 	
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -43,13 +43,13 @@
                             junit.jupiter.execution.parallel.mode.classes.default = concurrent
                         </configurationParameters>
                     </properties> 
-                 <!--   <parallel>all</parallel>
+                 &lt;!&ndash;   <parallel>all</parallel>
                     <threadCount>10</threadCount>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile> -->
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile> &ndash;&gt;
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 
 </project>
