--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 		</dependency>
 	</dependencies>
 	
-    <!--<build>
+    <build>
         <plugins>
-            <plugin>
+         <!--   <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M1</version>
@@ -47,9 +47,17 @@
                     <threadCount>10</threadCount>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile> &ndash;&gt;
                 </configuration>
-            </plugin>
+            </plugin> -->
+		<plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                    <configuration>
+                    <release>12</release> 
+                    </configuration>
+               </plugin>
         </plugins>
-    </build>-->
+    </build>
 
 
 </project>
